[package]
name = "seven-segment-display"
version = "0.1.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.0", default-features = false }
avr-device = "0.3.0"
bare-metal = "0.2.5"
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-abort = "0.3.2"
ringbuffer = { version = "0.7.1", default-features = false }
ufmt = "0.1.0"

[dependencies.arduino-uno]
git = "https://github.com/rahix/avr-hal"
rev = "885e8ec6d6d2fe34f26a1e2697a99f41092f0985"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
